[package]
name = "agnostic_test"
version = "0.1.0"
authors = ["Konstantin Senkevich <konstsen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "*", features=["client", "tcp"] }
log = { version = "0.*" }
agnostic = { git = "https://github.com/sonicxconst1/agnostic.git", branch = "master" }
utils = { git = "https://github.com/sonicxconst1/utils.git", branch = "master" }

[dev-dependencies]
tokio-test = { version = "*" }
